docs/v5.2.0/_sources/gallery/extras/HG01.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/HG01.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_HG01.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_HG01.py:


Hermite-Gauss 01 Mode Detector
==============================

This example demonstrates the initialization and visualization of HG01 Mode detector using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 7-50



.. image-sg:: /gallery/extras/images/sphx_glr_HG01_001.png
   :alt: HG01
   :srcset: /gallery/extras/images/sphx_glr_HG01_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 700x700 with 2 Axes>





|

.. code-block:: Python

    from PyMieSim import (
        ureg,
        InfiniteCylinder,
        Sphere,
        Gaussian,
        PolarizationState,
        CoherentMode,
        Simulation,
    )



    polarization_state = PolarizationState(
        angle=0 * ureg.degree,
    )

    source = Gaussian(
        wavelength=1550 * ureg.nanometer,
        polarization=polarization_state,
        optical_power=1 * ureg.watt,
        numerical_aperture=0.3,
    )

    scatterer = InfiniteCylinder(
        diameter=1800 * ureg.nanometer,
        medium=1.0,
        material=1.5,
    )

    detector = CoherentMode(
        mode_number="HG01",
        numerical_aperture=0.2,
        gamma_offset=0 * ureg.degree,
        phi_offset=30 * ureg.degree,
        rotation=0 * ureg.degree,
        polarization_filter=0 * ureg.degree,
        medium=1.0,
    )

    detector.initialize_mesh(scatterer)

    setup = Simulation(scatterer=scatterer, source=source, detector=detector)

    setup.plot_system()

.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.177 seconds)


.. _sphx_glr_download_gallery_extras_HG01.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: HG01.ipynb <HG01.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: HG01.py <HG01.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: HG01.zip <HG01.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
